--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@stitches/react": "0.1.0-canary.12",
     "next": "10.0.7",
+    "next-compose-plugins": "2.2.1",
+    "next-optimized-images": "3.0.0-canary.10",
     "react": "17.0.1",
     "react-dom": "17.0.1"
   },
