--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next-compose-plugins": "2.2.1",
     "next-optimized-images": "3.0.0-canary.10",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "react-snowfall": "1.1.0"
   },
   "devDependencies": {
     "@types/node": "14.14.31",
