--- a/package.json
+++ b/package.json
@@ -9,18 +9,18 @@
     "export": "next export"
   },
   "dependencies": {
-    "@stitches/react": "0.1.0-canary.12",
-    "next": "10.0.7",
+    "@stitches/react": "1.2.5",
+    "next": "11.1.2",
     "next-compose-plugins": "2.2.1",
     "next-optimized-images": "3.0.0-canary.10",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
     "react-snowfall": "1.1.0"
   },
   "devDependencies": {
     "@types/node": "14.14.31",
-    "@types/react": "17.0.2",
-    "@types/react-dom": "17.0.1",
-    "typescript": "4.1.5"
+    "@types/react": "17.0.31",
+    "@types/react-dom": "17.0.10",
+    "typescript": "4.4.4"
   }
 }
