--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "export": "next export"
+    "export": "next export",
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "@stitches/react": "1.2.5",
