--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@stitches/react": "1.2.5",
+    "framer-motion": "4.1.17",
     "next": "11.1.2",
     "next-compose-plugins": "2.2.1",
     "next-optimized-images": "3.0.0-canary.10",
